AWS/Project-101-kittens-carousel-static-website-ec2/cfn-template-yaml.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Project-101
  This CloudFormation Template was written for 
  running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be 
  deployed on Amazon Linux 2 
  (ami-0a8b4cd432b1c3063) EC2 Instance with 
  custom security group which allows http 
  connections on port 80 and ssh port 22 from 
  anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server.
Resources:
  Myinstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0a8b4cd432b1c3063
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroups:
        - !Ref mysecgroup
      Tags:
        - Key: Name
          Value: cfn-template
      UserData: 
        Fn::Base64:
          !Sub | 
            #! /bin/bash
            yum update -y
            yum install httpd -y
            systemctl start httpd
            systemctl enable httpd
            cd /var/www/html
            wget https://raw.githubusercontent.com/XXX/my-projects/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/XXX/my-projects/Project-101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/XXX/my-projects/Project-101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/XXX/my-projects/Project-101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            wget https://raw.githubusercontent.com/XXX/my-projects/Project-101-kittens-carousel-static-website-ec2/static-web/cat3.png
  
  mysecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: enables ssh and http # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
